# maman12_biocomputing

./: README.md  main.py  pyproject.toml
.claude/: settings.local.json
algorithm/: BulkRnaGA.py  ElitistGA.py  base.py
algorithm/common/: crossover.py  parent_selection.py
assets/: deconvolution_results.csv  gene_celltype_TPM.tsv  gene_sample_TPM.tsv
