[tool.poetry]
name = "maman12"
version = "0.1.0"
description = ""
authors = ["guy <guy.berenshten@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
numpy = ">=2.3.5,<3.0.0"
pandas = ">=2.3.3,<3.0.0"
matplotlib = ">=3.10.7,<4.0.0"
scipy = ">=1.16.3,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
